NN-1918 IEP Role Access - implement an end-point to enable bulk add role to NWEB caseload based on existing role memberships,followed by removing legacy role assignments.